fix form alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,7 +124,6 @@ header {
 .form1 {
     display: flex;
     flex-direction: column;
-    width: 100%;
     max-width: 400px;
     margin: 10px;
 }
